Fix footer sign-up button text alignment

--- a/assets/scss/partials/_footer.scss
+++ b/assets/scss/partials/_footer.scss
@@ -82,7 +82,7 @@
                 color: $blue-2;
                 border-radius: 0;
                 font-size: 1.4rem;
-                padding: 5px 15px 0;
+                padding: 1px 15px 0;
                 background-color: $white;
                 text-transform: uppercase;
             }
